@@ -3,7 +3,7 @@
 
 <!ENTITY gst-ffmpeg-version-stable "0.10.0">
 <!ENTITY gst-python-version-stable "0.10.2">
-<!ENTITY gst-plugins-base-version-stable "0.10.4">
+<!ENTITY gst-plugins-base-version-stable "0.10.5">
 <!ENTITY gst-plugins-good-version-stable "0.10.2">
 <!ENTITY gst-plugins-ugly-version-stable "0.10.2">
 <!ENTITY gst-plugins-bad-version-stable "0.10.1">
