@@ -1,3 +1,12 @@
+2006-03-13  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* src/htdocs/bugs/bugs.xml:
+	* src/htdocs/entities.gst:
+	* src/htdocs/news/news.xml:
+	* src/htdocs/releases/gst-plugins-base/0.10.5.xml:
+	* src/htdocs/releases/gst-plugins-base/Makefile.am:
+	  another release
+
 2006-03-10  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* src/htdocs/news/news.xml:
